--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.myApp {
+  display: flex;
+  height: '100%';
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.side {
+  flex-direction: row;
+  margin: 50px;
+  border: 1px solid black;
+  height: 500px;
+  min-width: 300px;
+}
+
+.transfer {
+  display: flex;
+
+}
+
+.transferButton {
+  flex-direction: column;
+
+}
+
+
+.selected-item {
+  background: gray;
+}
